# cookiecutter-fastapi

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.slug }}/: .gitignore  README.md  gulpfile.js  package.json  pyproject.toml  requirements.txt
{{ cookiecutter.slug }}/apps/: config.py  main.py
{{ cookiecutter.slug }}/apps/routers/: pages.py
{{ cookiecutter.slug }}/apps/templates/layouts/: base.html  horizontal-tw.html  horizontal.html  vertical-tw.html  vertical.html
